# fakehub

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_request.md  feature_request.md
.github/workflows/: build_test.yml  release.yml
src/: args.rs  git.rs  git_tests.rs  main.rs  run.rs  time.rs
