[package]
name = "fakehub"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }
git2 = "0.20.0"
rand = "0.9.0"

# Required for cross-compilation in our CI release pipeline
[dependencies.openssl]
version = "0.10.59"
features = ["vendored"]
